--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1,8 +1,54 @@
 body {
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 17%;
+  margin-right: 17%;
   margin-top: 5%;
   font-family: sans-serif;
+  min-width: 700px;
+  background-image: url('../assets/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.content-father {
+	width: 100%;
+	height: 100%;
+	position: relative;
+	background-image: url('../assets/bg.jpg');
+	background-position: center top;
+	background-size: cover;
+}
+
+.content {
+	position: absolute;
+	width: 1000px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%);
+	border-radius: 8px;
+	box-shadow: 0 10px 20px rgba(0,0,0,0.5);
+	overflow: hidden;
+	z-index: 2;
+	padding: 50px;
+	box-sizing: border-box;
+}
+
+.content::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	-webkit-filter: blur(20px);
+	-moz-filter: blur(20px);
+	-ms-filter: blur(20px);
+	-o-filter: blur(20px);
+	filter: blur(20px);
+	z-index: -3;
+	background-image: url('../assets/bg.jpg');
+	background-position: center top;
+	background-size: cover;
+	background-attachment: fixed;
 }
 
 .nav-title {
@@ -18,8 +64,8 @@ body {
 }
 
 .table-head {
-  font-size: 2em;
-  font-family: "Lucida Console", Monaco, monospace;
+  font-size: 1.1em;
+  font-family: 'Lucida Console', Monaco, monospace;
 }
 
 .text-vc {
